sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:76: error: not found: value Blanc
  else if(getCouleur(i)==Blanc){
                         ^